prevent home title to clip behind input

--- a/src/app/components/Home/home.scss
+++ b/src/app/components/Home/home.scss
@@ -2,7 +2,7 @@
 
 .search-title{
 	text-align: center;
-	margin-top: 25vh;
+	margin-top: 15vh;
 	svg {
 		height: 15vh;
 		margin: 0 auto;
